# SyncHire

./: .env.example  .gitignore  .pre-commit-config.yaml  ASYNC_TASK_IMPLEMENTATION_SUMMARY.md  AUDIT_FINDINGS.md  BACKEND_UNIT_TESTS_SUMMARY.md  BULK_DELETE_IMPLEMENTATION.md  BULK_OPERATIONS_API.md  BULK_OPERATIONS_IMPLEMENTATION_SUMMARY.md  CHUNKED_UPLOAD_IMPLEMENTATION.md  CLAUDE.md  COMPREHENSIVE_AUDIT_REPORT.md  COMPREHENSIVE_TEST_REPORT.md  DELIVERY_CHECKLIST.md  DEPLOYMENT_REPORT.md  E2E_TEST_REPORT.md  ERROR_HANDLING_IMPLEMENTATION.md  FINAL_ACCEPTANCE.md  FINAL_REPORT.md  LITE_API_COMPLETE.md  LITE_ARCHITECTURE.md  LITE_FINAL_SUMMARY.md  LITE_IMPLEMENTATION_PROGRESS.md  LITE_MIGRATION_GUIDE.md  LITE_REFACTOR_SUMMARY.md  Makefile  PROJECT_DELIVERY.md  PROJECT_READINESS.md  PROJECT_STATUS.md  PROMPT_TESTING_COMPLETE.md  QUICKSTART.md  README.en.md  README.md  README.zh-CN.md  README_LITE.md  REALTIME_FEATURES_SUMMARY.md  SECURITY_AUDIT_REPORT.md  SKILLS_AUTOMATION_GUIDE.md  SKILLS_INDEX.md  SKILLS_OPTIMIZATION_COMPLETE.md  (+11 more)
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md
api/: .env.example  .gitignore  Dockerfile  ERROR_CODES.md  MCP_INTEGRATION.md  README.md  README_PDF.md  TESTING_GUIDE.md  TEST_SUMMARY.md  alembic.ini  analyze_db_performance.py  main.py  main_lite.py  main_lite.spec  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_lite.txt  test_2fa_demo.py  test_migration.py  (+3 more)
docs/: INDEX.md  (+55 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+728 files in other folders)
