[package]
name = "synchire"
version = "0.1.1"
description = "SyncHire local-first desktop shell"
authors = ["SyncHire"]
edition = "2021"
license = "MIT"

[lib]
name = "synchire_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-opener = "2.5.4"
